# clinical-testing-tool

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  judge.py  main.py  persona_spec.py  pyproject.toml  rate_limit.py  requirements.txt  runner.py  safety-tester-config.example.json  sut_backends.py
docs/: CLI_REFERENCE.md  CUSTOM_SUT_API.md  DEPLOYMENT.md  FAQ.md  METHODOLOGY.md  PARAMETERIZED_PERSONAS.md  PERSONA_SCHEMA.md  RUNBOOK.md  custom-sut-openapi.yaml
examples/: README.md  example_batch_summary.json  example_result.json  junit-github-actions.yml
mental_health_tester/: __init__.py
personas/: academic_burnout_overwhelm.json  academic_stress.json  account_takeover_phishing_panic_shame.json  active_ideation.json  adoption_identity_grief.json  adoption_process_stall_ambivalent_grief.json  adult_child_parent_stroke_resentment_guilt_trap.json  after_calling_police_domestic_risk_at_work.json  air_ambulance_high_acuity_detachment_family_grief.json  airport_secondary_screening_aftermath_hypervigilance.json  anger_irritability.json  anniversary_suicide_loss_passive_disappearance.json  asylum_case_wait_years_numbness.json  athlete_coach_body_comment_restrictive_fear.json  authority_impersonation_phone_scam_elder_panic.json  avoid_talking_about_suicide_shame.json  bad_day_vent.json  batch_config.json  bereavement_anniversary.json  birth_family_contact_conflict.json  birthday_holidays_after_suicide_passive_thoughts.json  boss_downplays_safety_threats.json  (+232 more)
(+1070 files in other folders)
